<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.savageorgiev.blockthis.HomeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/block_large_graphic"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:id="@+id/header_image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_below="@+id/header_image"
                android:textSize="@dimen/abc_text_size_large_material"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:id="@+id/title"
                android:textStyle="bold"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paragraph1"
                android:layout_below="@+id/title"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="15dp"
                android:id="@+id/paragraph1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patrion"
                android:layout_below="@+id/paragraph1"
                android:textSize="@dimen/abc_text_size_large_material"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:id="@+id/what_now"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paragraph2"
                android:layout_below="@+id/what_now"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:padding="10dp"
                android:id="@+id/paragraph2"
                android:layout_marginBottom="5dp"
                android:autoLink="all"
                android:textColorLink="@color/red"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_patrion"
                android:id="@+id/become_patron"
                android:padding="5dp"
                android:background="@color/orange"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_below="@+id/paragraph2"
                android:onClick="donate_patron"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paypal"
                android:layout_below="@+id/become_patron"
                android:textSize="@dimen/abc_text_size_large_material"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/paypal"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paragraph3"
                android:layout_below="@+id/paypal"
                android:textSize="@dimen/abc_text_size_body_1_material"
                android:padding="10dp"
                android:id="@+id/paragraph3"
                android:layout_marginBottom="5dp"
                android:autoLink="all"
                android:textColorLink="@color/red"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/donate_paypal"
                android:id="@+id/donate_paypal"
                android:padding="5dp"
                android:background="@color/orange"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_below="@+id/paragraph3"
                android:onClick="donate_paypal"
                android:layout_weight="1"
                />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>
